[package]
name = "pomo-clock"
version = "0.1.0"
edition = "2021"
description = "A ratatui-based Pomodoro technique timer TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[profile.release]
opt-level = 3
lto = true
